[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Biscuit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=6]

[sub_resource type="SGRectangleShape2D" id=5]
extents_x = 22282240
extents_y = 327680

[sub_resource type="SGRectangleShape2D" id=1]
extents_x = 22282240

[sub_resource type="SGRectangleShape2D" id=6]
extents_y = 28835840

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Floor" parent="." instance=ExtResource( 6 )]

[node name="TopGoal" parent="." instance=ExtResource( 4 )]
position = Vector2( 340, 95 )
fixed_position_x = 22282240
fixed_position_y = 6225920

[node name="BotGoal" parent="." instance=ExtResource( 4 )]
position = Vector2( 340, 785 )
fixed_position_x = 22282240
fixed_position_y = 51445760

[node name="Arena" type="Node2D" parent="."]

[node name="Center" type="SGStaticBody2D" parent="Arena"]
collision_layer = 2
collision_mask = 0

[node name="CenterColor" type="ColorRect" parent="Arena/Center"]
margin_top = 435.0
margin_right = 680.0
margin_bottom = 445.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="CenterCollisionShape" type="SGCollisionShape2D" parent="Arena/Center"]
position = Vector2( 340, 440 )
scale = Vector2( 0.999985, 0.999985 )
fixed_position_x = 22282240
fixed_position_y = 28835840
fixed_scale_x = 65535
fixed_scale_y = 65535
shape = SubResource( 5 )

[node name="Walls" type="SGStaticBody2D" parent="Arena"]
collision_mask = 0

[node name="TopColor" type="ColorRect" parent="Arena/Walls"]
margin_right = 680.0
margin_bottom = 20.0
color = Color( 0.988235, 0.74902, 0.286275, 1 )

[node name="LeftColor" type="ColorRect" parent="Arena/Walls"]
margin_right = 20.0
margin_bottom = 880.0
rect_pivot_offset = Vector2( 0, 300 )
color = Color( 0.988235, 0.74902, 0.286275, 1 )

[node name="Rightcolor" type="ColorRect" parent="Arena/Walls"]
margin_left = 660.0
margin_right = 680.0
margin_bottom = 880.0
rect_pivot_offset = Vector2( 0, 300 )
color = Color( 0.988235, 0.74902, 0.286275, 1 )

[node name="BotColor" type="ColorRect" parent="Arena/Walls"]
margin_top = 860.0
margin_right = 680.0
margin_bottom = 880.0
color = Color( 0.988235, 0.74902, 0.286275, 1 )

[node name="TopCollisionShape" type="SGCollisionShape2D" parent="Arena/Walls"]
position = Vector2( 340, 10 )
fixed_position_x = 22282240
fixed_position_y = 655360
shape = SubResource( 1 )

[node name="LeftCollisionShape" type="SGCollisionShape2D" parent="Arena/Walls"]
position = Vector2( 10, 440 )
scale = Vector2( 0.999985, 0.999985 )
fixed_position_x = 655360
fixed_position_y = 28835840
fixed_scale_x = 65535
fixed_scale_y = 65535
shape = SubResource( 6 )

[node name="RightCollisionShape" type="SGCollisionShape2D" parent="Arena/Walls"]
position = Vector2( 670, 440 )
scale = Vector2( 0.999985, 0.999985 )
fixed_position_x = 43909120
fixed_position_y = 28835840
fixed_scale_x = 65535
fixed_scale_y = 65535
shape = SubResource( 6 )

[node name="BotCollisionShape" type="SGCollisionShape2D" parent="Arena/Walls"]
position = Vector2( 340, 870 )
fixed_position_x = 22282240
fixed_position_y = 57016320
shape = SubResource( 1 )

[node name="ServerPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 340, 680 )
fixed_position_x = 22282240
fixed_position_y = 44564480
color = Color( 0.839216, 0.156863, 0.156863, 1 )

[node name="ClientPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 340, 200 )
fixed_position_x = 22282240
fixed_position_y = 13107200
color = Color( 0.839216, 0.156863, 0.156863, 1 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 586, 788 )
fixed_position_x = 38404096
fixed_position_y = 51642368
color = Color( 0.968627, 0.498039, 0, 1 )

[node name="LeftBiscuit" parent="." instance=ExtResource( 5 )]
position = Vector2( 180, 440 )
fixed_position_x = 11796480
fixed_position_y = 28835840

[node name="MidBiscuit" parent="." instance=ExtResource( 5 )]
position = Vector2( 340, 440 )
fixed_position_x = 22282240
fixed_position_y = 28835840

[node name="RightBiscuit" parent="." instance=ExtResource( 5 )]
position = Vector2( 500, 440 )
fixed_position_x = 32768000
fixed_position_y = 28835840

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MainMenu" type="HBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -20.0
margin_right = 87.5
margin_bottom = 20.0

[node name="LocalButton" type="Button" parent="Menu/MainMenu"]
margin_right = 86.0
margin_bottom = 40.0
text = "Play Locally"

[node name="OnlineButton" type="Button" parent="Menu/MainMenu"]
margin_left = 90.0
margin_right = 175.0
margin_bottom = 40.0
text = "Play Online"

[node name="ConnectionPanel" type="WindowDialog" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -45.0
margin_right = 150.0
margin_bottom = 45.0

[node name="GridContainer" type="GridContainer" parent="Menu/ConnectionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 83.0
columns = 2

[node name="HostLabel" type="Label" parent="Menu/ConnectionPanel/GridContainer"]
margin_top = 5.0
margin_right = 141.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Host:"

[node name="HostField" type="LineEdit" parent="Menu/ConnectionPanel/GridContainer"]
margin_left = 145.0
margin_right = 286.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"
align = 2

[node name="PortLabel" type="Label" parent="Menu/ConnectionPanel/GridContainer"]
margin_top = 33.0
margin_right = 141.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Port:"

[node name="PortField" type="LineEdit" parent="Menu/ConnectionPanel/GridContainer"]
margin_left = 145.0
margin_top = 28.0
margin_right = 286.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "9999"
align = 2

[node name="ServerButton" type="Button" parent="Menu/ConnectionPanel/GridContainer"]
margin_top = 56.0
margin_right = 141.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="Menu/ConnectionPanel/GridContainer"]
margin_left = 145.0
margin_top = 56.0
margin_right = 286.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Client"

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
margin_top = 860.0
margin_bottom = 880.0

[node name="MessageLabel" type="Label" parent="Menu/CenterContainer"]
margin_left = 340.0
margin_top = 3.0
margin_right = 340.0
margin_bottom = 17.0
align = 1

[node name="ResetButton" type="Button" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -20.0
text = "RESET"

[node name="SyncLostLabel" type="Label" parent="Menu"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 106.0
text = "Regaining sync..."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/MainMenu/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="Menu/MainMenu/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="Menu/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="Menu/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="Menu/ResetButton" to="." method="_on_ResetButton_pressed"]
